--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@
 ###< symfony/framework-bundle ###
 
 .DS_Store
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
