--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.0",
         "fakerphp/faker": "^1.24",
+        "phpunit/phpunit": "^12.0",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/dom-crawler": "7.2.*",
         "symfony/maker-bundle": "^1.62"
     },
     "config": {
