--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,9 @@
+# define your env variables for the test env here
+KERNEL_CLASS='App\Kernel'
+APP_SECRET='$ecretf0rt3st'
+SYMFONY_DEPRECATIONS_HELPER=999999
+DATABASE_URL="mysql://app_user:Password123!@127.0.0.1:3306/greenquest?serverVersion=8.0.32&charset=utf8mb4"
 
-###> symfony/framework-bundle ###
-APP_SECRET=4e288b12244864da2aa49658818a4027
-###< symfony/framework-bundle ###
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
