--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,8 +1,8 @@
 vich_uploader:
     db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
-    #        namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+    mappings:
+        pictures:
+            uri_prefix: /medias/pictures
+            upload_destination: '%kernel.project_dir%/public/medias/pictures'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
