--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,16 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+gesdinet_jwt_refresh_token:
+    path: /api/token/refresh
+    controller: gesdinet.jwtrefreshtoken.refresh
+api_login_check:
+    path: /api/login
+#api_platform:
+#    resource: .
+#    type: api_platform
+#    prefix: /api
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui}
