Update backend.yml file

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Exécuter les tests
         env:
-          DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
+          DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest
         run: vendor/bin/phpunit
 
       # - name: Déploiement (optionnel)
