--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,7 +15,7 @@ jobs:
         image: mysql:8
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: greenquest
+          MYSQL_DATABASE: greenquest_test
         ports:
           - 3306:3306
         options: >-
