Update backend.yml file

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -35,6 +35,11 @@ jobs:
           extensions: mbstring, xml, ctype, iconv, pdo_mysql
           tools: composer
 
+      - name: Créer les tables avec Doctrine
+        env:
+          DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
+        run: php bin/console doctrine:migrations:migrate --no-interaction
+
       - name: Mise à jour des dépendances
         run: composer update
 
