--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Créer les tables avec Doctrine
         env:
           DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
-        run: php bin/console doctrine:migrations:migrate --no-interaction
+        run: php bin/console doctrine:schema:update --force
 
       - name: Exécuter les tests
         env:
