--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -41,6 +41,11 @@ jobs:
       - name: Installer les dépendances
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
+      - name: Supprimer le schéma
+        env:
+          DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
+        run: php bin/console doctrine:schema:drop --force --full-database --no-interaction
+
       - name: Créer les tables avec Doctrine
         env:
           DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
