Update yml file

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -51,9 +51,17 @@ jobs:
           DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
         run: php bin/console doctrine:schema:update --force --no-interaction
 
+      - name: Reconstruire les clés JWT
+        run: |
+          mkdir -p config/jwt
+          echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -D > config/jwt/private.pem
+          echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -D > config/jwt/public.pem
+          chmod 600 config/jwt/private.pem config/jwt/public.pem
+
       - name: Exécuter les tests
         env:
           DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest
+          JWT_PASSPHRASE: ${{ secrets.JWT_PASSPHRASE }}
         run: vendor/bin/phpunit
 
       # - name: Déploiement (optionnel)
