--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "gesdinet/jwt-refresh-token-bundle": "^1.4",
         "lexik/jwt-authentication-bundle": "^3.1.1",
         "nelmio/api-doc-bundle": "^5.0.1",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "7.2.*",
