--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -64,6 +64,19 @@ jobs:
           JWT_PASSPHRASE: ${{ secrets.JWT_PASSPHRASE }}
         run: vendor/bin/phpunit
 
+#      - name: Connexion à DockerHub (ou GHCR)
+#        if: github.ref == 'refs/heads/main'
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      #      - name: Build & Push Docker image
+      #        if: github.ref == 'refs/heads/main'
+      #        run: |
+      #          docker build -t monuser/greenquest-backend:latest .
+      #          docker push monuser/greenquest-backend:latest
+
       # - name: Déploiement (optionnel)
       #   if: github.ref == 'refs/heads/main'
       #   run: |
