--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -64,20 +64,39 @@ jobs:
           JWT_PASSPHRASE: ${{ secrets.JWT_PASSPHRASE }}
         run: vendor/bin/phpunit
 
-#      - name: Connexion à DockerHub (ou GHCR)
-#        if: github.ref == 'refs/heads/main'
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Connexion à DockerHub (ou GHCR)
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      #      - name: Build & Push Docker image
-      #        if: github.ref == 'refs/heads/main'
-      #        run: |
-      #          docker build -t monuser/greenquest-backend:latest .
-      #          docker push monuser/greenquest-backend:latest
+      - name: Build & Push Docker image
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker build -t kteyssere/greenquest-backend:latest .
+          docker push kteyssere/greenquest-backend:latest
 
-      # - name: Déploiement (optionnel)
-      #   if: github.ref == 'refs/heads/main'
-      #   run: |
-      #     ssh user@your-server "cd /path/to/backend && git pull && php bin/console cache:clear"
+      - name: Déploiement sur VPS
+        if: github.ref == 'refs/heads/main'
+        uses: appleboy/ssh-action@v0.1.0
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_PRIVATE_KEY }}
+          script: |
+            # Se rendre dans le dossier du backend
+            cd /var/www/backend
+            
+            # Créer ou mettre à jour le fichier de configuration Docker
+            mkdir -p ~/.docker
+            echo '{ "auths": { "https://index.docker.io/v1/": { "auth": "${{ secrets.DOCKER_AUTH }}" } } }' > ~/.docker/config.json
+            
+            # Puller l'image Docker depuis Docker Hub
+            docker pull kteyssere/greenquest-backend:latest
+            
+            # Optionnel : arrêter les conteneurs existants
+            docker-compose down
+            
+            # Lancer le nouveau conteneur avec la dernière image
+            docker-compose up -d --build
