--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -9,6 +9,32 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout du code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          extensions: mbstring, xml, ctype, iconv, pdo_mysql
+          tools: composer
+
+      - name: Mise à jour des dépendances
+        run: composer update
+
+      - name: Installer les dépendances
+        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+
+      - name: Sauvegarder les dépendances
+        uses: actions/upload-artifact@v4
+        with:
+          name: vendor
+          path: vendor
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
 
     services:
       database:
@@ -35,11 +61,11 @@ jobs:
           extensions: mbstring, xml, ctype, iconv, pdo_mysql
           tools: composer
 
-      - name: Mise à jour des dépendances
-        run: composer update
-
-      - name: Installer les dépendances
-        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+      - name: Télécharger les dépendances
+        uses: actions/download-artifact@v4
+        with:
+          name: vendor
+          path: vendor
 
       - name: Supprimer le schéma
         env:
@@ -60,43 +86,38 @@ jobs:
 
       - name: Exécuter les tests
         env:
-          DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest
+          DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
           JWT_PASSPHRASE: ${{ secrets.JWT_PASSPHRASE }}
         run: vendor/bin/phpunit
 
-      - name: Connexion à DockerHub (ou GHCR)
-        if: github.ref == 'refs/heads/main'
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout du code
+        uses: actions/checkout@v4
+
+      - name: Connexion à DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & Push Docker image
-        if: github.ref == 'refs/heads/main'
         run: |
           docker build -t kteyssere/greenquest-backend:latest .
           docker push kteyssere/greenquest-backend:latest
 
       - name: Déploiement sur VPS
-        if: github.ref == 'refs/heads/main'
         uses: appleboy/ssh-action@v0.1.0
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_PRIVATE_KEY }}
           script: |
-            # Se rendre dans le dossier du backend
             cd /var/www/backend
-            
-            # Créer ou mettre à jour le fichier de configuration Docker
-            mkdir -p ~/.docker
-            echo '{ "auths": { "https://index.docker.io/v1/": { "auth": "${{ secrets.DOCKER_AUTH }}" } } }' > ~/.docker/config.json
-            
-            # Puller l'image Docker depuis Docker Hub
             docker pull kteyssere/greenquest-backend:latest
-            
-            # Optionnel : arrêter les conteneurs existants
             docker-compose down
-            
-            # Lancer le nouveau conteneur avec la dernière image
             docker-compose up -d --build
