--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout du code
         uses: actions/checkout@v4
@@ -20,17 +21,15 @@ jobs:
           extensions: mbstring, xml, ctype, iconv, pdo_mysql
           tools: composer
 
-      - name: Mise à jour des dépendances
-        run: composer update
+      - name: Cache Composer
+        uses: actions/cache@v4
+        with:
+          path: ~/.composer/cache
+          key: composer-${{ hashFiles('composer.lock') }}
+          restore-keys: composer-
 
       - name: Installer les dépendances
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
-
-      - name: Sauvegarder les dépendances
-        uses: actions/upload-artifact@v4
-        with:
-          name: vendor
-          path: vendor
 
   test:
     runs-on: ubuntu-latest
@@ -61,11 +60,15 @@ jobs:
           extensions: mbstring, xml, ctype, iconv, pdo_mysql
           tools: composer
 
-      - name: Télécharger les dépendances
-        uses: actions/download-artifact@v4
+      - name: Cache Composer
+        uses: actions/cache@v4
         with:
-          name: vendor
-          path: vendor
+          path: ~/.composer/cache
+          key: composer-${{ hashFiles('composer.lock') }}
+          restore-keys: composer-
+
+      - name: Installer les dépendances
+        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
       - name: Supprimer le schéma
         env:
@@ -88,7 +91,7 @@ jobs:
         env:
           DATABASE_URL: mysql://root:root@127.0.0.1:3306/greenquest_test
           JWT_PASSPHRASE: ${{ secrets.JWT_PASSPHRASE }}
-        run: vendor/bin/phpunit
+        run: php vendor/bin/phpunit
 
   deploy:
     runs-on: ubuntu-latest
