--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -120,7 +120,9 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_PRIVATE_KEY }}
           script: |
+            export JWT_PASSPHRASE=${{ secrets.JWT_PASSPHRASE }}
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www/backend
             docker pull kteyssere/greenquest-backend:latest
-            docker-compose down
-            docker-compose up -d --build
+            docker compose down
+            docker compose up -d --build
