--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html/public;
+    root /public;
     index index.php index.html;
 
     # Accès aux fichiers publics (CSS, JS, images…)
