--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -126,3 +126,9 @@ jobs:
             docker pull kteyssere/greenquest-backend:latest
             docker compose down
             docker compose up -d --build --remove-orphans
+            docker compose exec -T greenquest-backend mkdir -p config/jwt
+            echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -d | docker compose exec -T greenquest-backend tee config/jwt/private.pem > /dev/null
+            echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -d | docker compose exec -T greenquest-backend tee config/jwt/public.pem > /dev/null
+            docker compose exec -T greenquest-backend chmod 600 config/jwt/*.pem
+            docker compose exec -T greenquest-backend php bin/console doctrine:schema:update --force --no-interaction
+
