--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -126,6 +126,10 @@ jobs:
             docker pull kteyssere/greenquest-backend:latest
             docker compose down
             docker compose up -d --build --remove-orphans
+            echo "⏳ Attente du démarrage de greenquest-backend..."
+            sleep 10
+            docker compose ps
+            docker compose logs greenquest-backend
             docker compose exec -T greenquest-backend mkdir -p config/jwt
             echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -d | docker compose exec -T greenquest-backend tee config/jwt/private.pem > /dev/null
             echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -d | docker compose exec -T greenquest-backend tee config/jwt/public.pem > /dev/null
