--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,9 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
-gesdinet_jwt_refresh_token:
+api_refresh_token:
     path: /api/token/refresh
-    controller: gesdinet.jwtrefreshtoken.refresh
 api_login_check:
     path: /api/login
 #api_platform:
