--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,13 +3,14 @@ name: CI/CD Backend
 on:
   push:
     branches: [ main, develop ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main, develop ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout du code
         uses: actions/checkout@v4
@@ -34,7 +35,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
-
     services:
       database:
         image: mysql:8
@@ -93,10 +93,10 @@ jobs:
           JWT_PASSPHRASE: ${{ secrets.JWT_PASSPHRASE }}
         run: php vendor/bin/phpunit
 
-  deploy:
+  deploy_staging:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/develop'
 
     steps:
       - name: Checkout du code
@@ -108,12 +108,53 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build & Push Docker image
+      - name: Build & Push Docker image (staging)
         run: |
-          docker build -t kteyssere/greenquest-backend:latest .
+          docker build -t kteyssere/greenquest-backend:staging .
+          docker push kteyssere/greenquest-backend:staging
+
+      - name: Déploiement sur VPS (staging)
+        uses: appleboy/ssh-action@v0.1.0
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_PRIVATE_KEY }}
+          script: |
+            export JWT_PASSPHRASE=${{ secrets.JWT_PASSPHRASE }}
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            cd /var/www
+            docker pull kteyssere/greenquest-backend:staging
+            docker compose -f docker-compose.staging.yml down
+            docker compose -f docker-compose.staging.yml up -d --build --remove-orphans
+            docker compose -f docker-compose.staging.yml exec -T backend mkdir -p config/jwt
+            echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -d | docker compose -f docker-compose.staging.yml exec -T backend tee config/jwt/private.pem > /dev/null
+            echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -d | docker compose -f docker-compose.staging.yml exec -T backend tee config/jwt/public.pem > /dev/null
+            docker compose -f docker-compose.staging.yml exec -T backend chmod 600 config/jwt/*.pem
+            docker compose -f docker-compose.staging.yml exec -T backend php bin/console doctrine:schema:update --force --no-interaction
+
+  deploy_prod:
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      - name: Checkout du code
+        uses: actions/checkout@v4
+
+      - name: Connexion à DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push Docker image (prod)
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/}
+          docker build -t kteyssere/greenquest-backend:$VERSION -t kteyssere/greenquest-backend:latest .
+          docker push kteyssere/greenquest-backend:$VERSION
           docker push kteyssere/greenquest-backend:latest
 
-      - name: Déploiement sur VPS
+      - name: Déploiement sur VPS (prod)
         uses: appleboy/ssh-action@v0.1.0
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -126,18 +167,8 @@ jobs:
             docker pull kteyssere/greenquest-backend:latest
             docker compose down
             docker compose up -d --build --remove-orphans
-
-      - name: Configurer les clés JWT et mettre à jour la base de données
-        uses: appleboy/ssh-action@v0.1.0
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_PRIVATE_KEY }}
-          script: |
-            cd /var/www
             docker compose exec -T backend mkdir -p config/jwt
             echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -d | docker compose exec -T backend tee config/jwt/private.pem > /dev/null
             echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -d | docker compose exec -T backend tee config/jwt/public.pem > /dev/null
             docker compose exec -T backend chmod 600 config/jwt/*.pem
             docker compose exec -T backend php bin/console doctrine:schema:update --force --no-interaction
-  
