Update Dockerfile and nginx conf

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,31 +1,22 @@
 server {
-    listen 80;
-    server_name 54.37.14.239;
+  listen 80;
+  server_name 54.37.14.239;
 
-    root /public;
-    index index.php index.html;
+  root /var/www/html/public;
+  index index.php;
 
-    # Accès aux fichiers publics (CSS, JS, images…)
-    location / {
-        try_files $uri /index.php$is_args$args;
-    }
+  location / {
+    try_files $uri /index.php$is_args$args;
+  }
 
-    # Traiter les requêtes PHP (Symfony)
-    location ~ ^/index\.php(/|$) {
-        fastcgi_pass app:9000;  # Nom du service PHP-FPM + port
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        internal;
-    }
+  location ~ \.php$ {
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
+    fastcgi_pass backend:9000;   # service FPM
+    fastcgi_read_timeout 300;
+  }
 
-    # Interdire l'accès direct à d'autres fichiers .php
-    location ~ \.php$ {
-        return 404;
-    }
-
-    # Logs
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+  location ~ ^/index\.php(/|$) { }  # pas nécessaire si bloc ci-dessus gère .php
+  location ~ \.php$ { }             # ne pas renvoyer 404 ici si tu utilises le bloc PHP
 }
