--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -164,7 +164,7 @@ jobs:
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
             docker pull kteyssere/greenquest-backend:staging
-            docker compose up -d --build --no-deps backend-staging
+            docker compose up -d --no-deps backend-staging
             docker compose exec -T backend-staging mkdir -p config/jwt
             echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -d | docker compose exec -T backend-staging tee config/jwt/private.pem > /dev/null
             echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -d | docker compose exec -T backend-staging tee config/jwt/public.pem > /dev/null
@@ -204,7 +204,7 @@ jobs:
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
             docker pull kteyssere/greenquest-backend:latest
-            docker compose up -d --build --no-deps backend
+            docker compose up -d --no-deps backend
             docker compose exec -T backend mkdir -p config/jwt
             echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -d | docker compose exec -T backend tee config/jwt/private.pem > /dev/null
             echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -d | docker compose exec -T backend tee config/jwt/public.pem > /dev/null
