--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -163,8 +163,8 @@ jobs:
             export JWT_PASSPHRASE=${{ secrets.JWT_PASSPHRASE }}
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
-            docker compose pull kteyssere/greenquest-backend:staging
-            docker compose up -d --no-deps backend-staging
+            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose pull kteyssere/greenquest-backend:staging
+            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps backend-staging
 
   deploy_prod:
     runs-on: ubuntu-latest
@@ -198,10 +198,5 @@ jobs:
             export JWT_PASSPHRASE=${{ secrets.JWT_PASSPHRASE }}
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
-            docker pull kteyssere/greenquest-backend:latest
-            docker compose up -d --no-deps backend
-            docker compose exec -T backend mkdir -p config/jwt
-            echo "${{ secrets.JWT_PRIVATE_KEY_B64 }}" | base64 -d | docker compose exec -T backend tee config/jwt/private.pem > /dev/null
-            echo "${{ secrets.JWT_PUBLIC_KEY_B64 }}" | base64 -d | docker compose exec -T backend tee config/jwt/public.pem > /dev/null
-            docker compose exec -T backend chmod 600 config/jwt/*.pem
-            docker compose exec -T backend php bin/console doctrine:schema:update --force --no-interaction
+            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker pull kteyssere/greenquest-backend:latest
+            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps backend
