--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -164,7 +164,7 @@ jobs:
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
             JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose pull kteyssere/greenquest-backend:staging
-            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps backend-staging
+            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps --force-recreate backend-staging
 
   deploy_prod:
     runs-on: ubuntu-latest
