--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -165,8 +165,11 @@ jobs:
             cd /var/www
             JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose pull kteyssere/greenquest-backend:staging
             JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps --force-recreate backend-staging
+            docker compose exec -T backend-staging php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
+            docker compose exec -T backend-staging php bin/console cache:clear --env=prod
+            curl -fsS -m 5 http://localhost:8080/health >/dev/null
 
-  deploy_prod:
+deploy_prod:
     runs-on: ubuntu-latest
     needs: test
     if: startsWith(github.ref, 'refs/tags/v')
@@ -200,3 +203,6 @@ jobs:
             cd /var/www
             JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker pull kteyssere/greenquest-backend:latest
             JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps backend
+            docker compose exec -T backend php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
+            docker compose exec -T backend php bin/console cache:clear --env=prod
+            curl -fsS -m 5 http://localhost:8080/health >/dev/null
