--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+env:
+  IMAGE: kteyssere/greenquest-backend
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -150,8 +153,8 @@ jobs:
 
       - name: Build & Push Docker image (staging)
         run: |
-          docker build -t kteyssere/greenquest-backend:staging .
-          docker push kteyssere/greenquest-backend:staging
+          docker build -t $IMAGE:staging .
+          docker push $IMAGE:staging
 
       - name: Déploiement sur VPS (staging)
         uses: appleboy/ssh-action@v0.1.0
@@ -163,11 +166,10 @@ jobs:
             export JWT_PASSPHRASE=${{ secrets.JWT_PASSPHRASE }}
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
-            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose pull kteyssere/greenquest-backend:staging
+            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker pull $IMAGE:staging
             JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps --force-recreate backend-staging
             docker compose exec -T backend-staging php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
             docker compose exec -T backend-staging php bin/console cache:clear --env=prod
-            curl -fsS -m 5 http://localhost:8080/health >/dev/null
 
   deploy_prod:
     runs-on: ubuntu-latest
@@ -187,9 +189,9 @@ jobs:
       - name: Build & Push Docker image (prod)
         run: |
           VERSION=${GITHUB_REF#refs/tags/}
-          docker build -t kteyssere/greenquest-backend:$VERSION -t kteyssere/greenquest-backend:latest .
-          docker push kteyssere/greenquest-backend:$VERSION
-          docker push kteyssere/greenquest-backend:latest
+          docker build -t $IMAGE:$VERSION -t $IMAGE:latest .
+          docker push $IMAGE:$VERSION
+          docker push $IMAGE:latest
 
       - name: Déploiement sur VPS (prod)
         uses: appleboy/ssh-action@v0.1.0
@@ -201,8 +203,7 @@ jobs:
             export JWT_PASSPHRASE=${{ secrets.JWT_PASSPHRASE }}
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
-            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker pull kteyssere/greenquest-backend:latest
+            JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker pull $IMAGE:latest
             JWT_PASSPHRASE='${{ secrets.JWT_PASSPHRASE }}' docker compose up -d --no-deps backend
             docker compose exec -T backend php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
             docker compose exec -T backend php bin/console cache:clear --env=prod
-            curl -fsS -m 5 http://localhost:8080/health >/dev/null
