--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^3.3.2",
         "gesdinet/jwt-refresh-token-bundle": "^1.4",
         "lexik/jwt-authentication-bundle": "^3.1.1",
+        "minishlink/web-push": "^9.0",
         "nelmio/api-doc-bundle": "^5.0.1",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.1",
