--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -26,9 +26,11 @@ services:
             $private: '%env(VAPID_PRIVATE_KEY)%'
             $subject: '%env(VAPID_SUBJECT)%'
 
+    App\Tests\Double\RssFetcherStub: ~
+
     App\Interface\RssFetcherInterface:
-        alias: App\Service\RssFetcher
-        public: false
+        alias: App\Tests\Double\RssFetcherStub
+        public: true
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
