--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.eco_news_sources_path: '%kernel.project_dir%/public/eco_news_sources.json'
 
 services:
     # default configuration for services in *this* file
