--- a/.env
+++ b/.env
@@ -40,6 +40,6 @@ JWT_TOKEN_TTL=3600
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
-VAPID_PUBLIC_KEY=xxxx
-VAPID_PRIVATE_KEY=yyyy
-VAPID_SUBJECT=mailto:contact@tondomaine.tld
+VAPID_PUBLIC_KEY=BCkAsfZB-NRFFvs1mtIdQVHKMcu99jovqsdnMb5KnPkiHxFU2OEKkMGeoLgB01UP-YvRXSk0chSo4PPjQLVNYmk
+VAPID_PRIVATE_KEY=aGqorqPWHyt7I-HElNbWTXd0I9F4-kc-SA8Q8kI_FkM
+VAPID_SUBJECT=mailto:karinateyssere@gmail.com
