Fix notification sends + tests + fix commands

--- a/.env.test
+++ b/.env.test
@@ -14,3 +14,5 @@ JWT_TOKEN_TTL=3600
 VAPID_PUBLIC_KEY=BCkAsfZB-NRFFvs1mtIdQVHKMcu99jovqsdnMb5KnPkiHxFU2OEKkMGeoLgB01UP-YvRXSk0chSo4PPjQLVNYmk
 VAPID_PRIVATE_KEY=aGqorqPWHyt7I-HElNbWTXd0I9F4-kc-SA8Q8kI_FkM
 VAPID_SUBJECT=mailto:karinateyssere@gmail.com
+
+FRONTEND_BASE_URL=http://localhost:4200
