--- a/.env
+++ b/.env
@@ -43,3 +43,10 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 VAPID_PUBLIC_KEY=BCkAsfZB-NRFFvs1mtIdQVHKMcu99jovqsdnMb5KnPkiHxFU2OEKkMGeoLgB01UP-YvRXSk0chSo4PPjQLVNYmk
 VAPID_PRIVATE_KEY=aGqorqPWHyt7I-HElNbWTXd0I9F4-kc-SA8Q8kI_FkM
 VAPID_SUBJECT=mailto:karinateyssere@gmail.com
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
+
+FRONTEND_BASE_URL=https://greenquest.cloud
